--- a/JQuery/styles.css
+++ b/JQuery/styles.css
@@ -31,9 +31,16 @@ input {
   border: 3px solid white;
   padding-left: 1.5ex;
 }
-#biography, #comments, #affiliations {
+#biography, #affiliations, #comments {
+  background-color: transparent;
   height: 22ex;
+  width: 325px;
+  border: 3px solid white;
+  color: white;
   padding-bottom: 18ex;
+}
+.textWrap {
+  width: inherit;
 }
 #button-submit {
   width: 13em;
